--- a/src/component/MainPage/Button.css
+++ b/src/component/MainPage/Button.css
@@ -1,11 +1,48 @@
-#parentStyle {
+.container_menu {
   position: absolute;
-  bottom: 0px;
-  padding: 10px;
-  border-radius: 30px;
-  width: 100%;
-  height: 15%;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.05);
-  z-index: 2;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 388px;
+  height: 140px;
+  bottom: 50px;
+  background: rgba(238, 238, 238, 0.92);
+  border-radius: 10px;
+  display : flex;
+  z-index : 2;
+}
+
+.table {
+  width: 110px;
+  height: 110px;
+  right: 283px;
+  bottom: 65px;
+  background: rgba(255, 255, 255, 0.92);
+  border-radius: 10px;
+  z-index : 2;
+  margin : auto;
+  border: 0;
+}
+
+.outlet {
+  width: 110px;
+  height: 110px;
+  right: 159px;
+  bottom: 65px;
+  background: rgba(255, 255, 255, 0.92);
+  border-radius: 10px;
+  z-index : 2;
+  margin : auto;
+  border: 0;
+}
+
+.search {
+  width: 110px;
+  height: 110px;
+  right: 35px;
+  bottom: 65px;
+  background: rgba(255, 255, 255, 0.92);
+  border-radius: 10px;
+  z-index : 2;
+  margin : auto;
+  border: 0;
 }
