--- a/src/component/MainPage/Button.css
+++ b/src/component/MainPage/Button.css
@@ -2,10 +2,11 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: 388px;
+  width: 340px;
   height: 140px;
   bottom: 50px;
   background: rgba(238, 238, 238, 0.92);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   display : flex;
   z-index : 2;
@@ -45,4 +46,55 @@
   z-index : 2;
   margin : auto;
   border: 0;
+}
+
+.img_table {
+  width: 50px;
+  height: 50px;
+  left: 65px;
+  top: 768px;
+}
+
+.img_outlet {
+  width: 50px;
+  height: 50px;
+  left: 189px;
+  top: 768px;
+}
+
+.img_search {
+  width: 50px;
+  height: 50px;
+  left: 313px;
+  top: 781px;
+}
+
+.label_table {
+  width: 101px;
+  height: 16px;
+  left: 40px;
+  top: 828px;
+  
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+
+  color: #000000;
+}
+
+.label_outlet {
+  width: 101px;
+  height: 16px;
+  left: 164px;
+  top: 828px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+
+  color: #000000;
 }
