--- a/src/component/MainPage/Button.css
+++ b/src/component/MainPage/Button.css
@@ -2,7 +2,8 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: 340px;
+  width: 388px;
+  max-width: 90%;
   height: 140px;
   bottom: 50px;
   background: rgba(238, 238, 238, 0.92);
