--- a/src/component/MainPage/Button.css
+++ b/src/component/MainPage/Button.css
@@ -79,3 +79,12 @@
   line-height: 16px;
   color: #000000;
 }
+
+.title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+}
