--- a/src/component/MainPage/Button.css
+++ b/src/component/MainPage/Button.css
@@ -23,3 +23,77 @@
   line-height: 21px;
   color: #FFFFFF;
 }
+
+.overlay{
+  width: 220px;
+  height: 100px;
+  background: #FFFFFF;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+}
+
+.content{
+  width : 70%;
+  margin : auto;
+  display : flex;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.name{
+  width: 90px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
+  padding-top : 24px;
+  color: #4AD395;
+}
+
+.time{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+
+  color: #000000;
+}
+
+.infoImg{
+  padding-top : 20px;
+  width: 60px;
+  height: 60px;
+  /*url(${props=>props.img})*/
+}
+
+/*.name{*/
+/*  width: 90px;*/
+/*  font-family: Roboto;*/
+/*  font-style: normal;*/
+/*  font-weight: bold;*/
+/*  font-size: 18px;*/
+/*  line-height: 21px;*/
+/*  padding-top : 15px;*/
+/*  color: #4AD395;*/
+
+/*  margin-bottom : 10px;*/
+/*}*/
+
+/*.time{*/
+/*  font-family: Roboto;*/
+/*  font-style: normal;*/
+/*  font-weight: normal;*/
+/*  font-size: 12px;*/
+/*  line-height: 14px;*/
+
+/*  color: #000000;*/
+/*}*/
+
+/*.infoImg{*/
+/*  padding-top : 40px;*/
+/*  width: 50px;*/
+/*  height: 50px;*/
+/*  !*url(${props=>props.img})*!*/
+/*}*/
