--- a/src/component/MainPage/Button.css
+++ b/src/component/MainPage/Button.css
@@ -49,6 +49,7 @@
   line-height: 21px;
   padding-top : 24px;
   color: #4AD395;
+  padding-bottom: 4px;
 }
 
 .time{
@@ -57,7 +58,7 @@
   font-weight: normal;
   font-size: 12px;
   line-height: 14px;
-
+  padding-bottom: 2px;
   color: #000000;
 }
 
